--- a/src/main/resources/editor.css
+++ b/src/main/resources/editor.css
@@ -26,6 +26,16 @@
     -fx-font-size: 18px;
     -fx-font-family: 'Linerama';
 }
+.greenSideBarButton{
+    -fx-background-image: url('gui/green-editor-button.png');
+    -fx-font-size: 18px;
+    -fx-font-family: 'Linerama';
+}
+.redSideBarButton{
+    -fx-background-image: url('gui/red-menu-button1.png');
+    -fx-font-size: 18px;
+    -fx-font-family: 'Linerama';
+}
 .dialogueBox{
     -fx-background-image: url('gui/editor-dialogue-box.png');
     -fx-font-family: 'Linerama';
