--- a/src/main/resources/editorClient.fxml
+++ b/src/main/resources/editorClient.fxml
@@ -4,6 +4,7 @@
 <?import javafx.scene.canvas.Canvas?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.RadioButton?>
+<?import javafx.scene.control.Separator?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
@@ -19,7 +20,7 @@
 <BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="896.0" prefWidth="1324.0" styleClass="root" stylesheets="@editor.css" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1">
 	<center>
 		<Pane prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
-			<Canvas fx:id="levelCanvas" height="896.0" layoutX="31.0" width="1024.0" />
+			<Canvas fx:id="levelCanvas" height="896.0" layoutY="8.0" width="1024.0" />
             <Pane fx:id="settingsDialoguePane" layoutX="312.0" layoutY="148.0" prefHeight="600.0" prefWidth="400.0" styleClass="dialogueBox" visible="false">
             <Text layoutX="110.0" layoutY="40.0" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="dialogueTitle" text="Level Settings" />
             <Text layoutX="20.0" layoutY="85.0" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="sideBarText" text="Seconds between item drops:" />
@@ -221,7 +222,7 @@
                      <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
                   </padding>
                </HBox>
-               <VBox prefHeight="200.0" prefWidth="100.0">
+               <VBox alignment="CENTER" prefHeight="297.0" prefWidth="284.0">
                   <HBox prefHeight="70.0" prefWidth="284.0">
                      <VBox.margin>
                         <Insets left="5.0" right="5.0" />
@@ -233,11 +234,12 @@
                         <HBox.margin>
                            <Insets left="25.0" right="10.0" />
                         </HBox.margin>
-                        <Text strokeType="OUTSIDE" strokeWidth="0.0" styleClass="sideBarText" text="Width:">
-                           <VBox.margin>
-                              <Insets bottom="5.0" />
-                           </VBox.margin>
-                        </Text>
+                        <HBox prefHeight="100.0" prefWidth="200.0">
+                           <children>
+                              <Text strokeType="OUTSIDE" strokeWidth="0.0" styleClass="sideBarText" text="Width: " />
+                              <Text fx:id="widthText" layoutX="10.0" layoutY="29.0" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="sideBarText" text="x" />
+                           </children>
+                        </HBox>
                         <TextField fx:id="widthTextField">
                            <font>
                               <Font size="18.0" />
@@ -248,11 +250,12 @@
                         <HBox.margin>
                            <Insets left="10.0" />
                         </HBox.margin>
-                        <Text strokeType="OUTSIDE" strokeWidth="0.0" styleClass="sideBarText" text="Height">
-                           <VBox.margin>
-                              <Insets bottom="5.0" />
-                           </VBox.margin>
-                        </Text>
+                        <HBox prefHeight="100.0" prefWidth="200.0">
+                           <children>
+                              <Text strokeType="OUTSIDE" strokeWidth="0.0" styleClass="sideBarText" text="Height: " />
+                              <Text fx:id="heightText" layoutX="10.0" layoutY="29.0" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="sideBarText" text="x" />
+                           </children>
+                        </HBox>
                         <TextField fx:id="heightTextField">
                            <font>
                               <Font size="18.0" />
@@ -262,19 +265,46 @@
                   </HBox>
                   <Button fx:id="sizeChangeButton" alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" onAction="#changeLevelSize" prefHeight="36.0" prefWidth="187.0" styleClass="sideBarButton" text="Apply Changes">
                      <VBox.margin>
-                        <Insets bottom="5.0" left="50.0" top="15.0" />
+                        <Insets bottom="5.0" top="15.0" />
                      </VBox.margin>
                   </Button>
-                  <TextFlow prefHeight="200.0" prefWidth="200.0" styleClass="sideBarText">
+                  <TextFlow prefHeight="58.0" prefWidth="284.0" styleClass="sideBarText">
                      <VBox.margin>
                         <Insets top="10.0" />
                      </VBox.margin>
                      <Text fx:id="sizeChangeErrorText" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="sideBarText" />
                   </TextFlow>
+                  <HBox alignment="CENTER" prefHeight="34.0" prefWidth="284.0">
+                     <children>
+                        <Text strokeType="OUTSIDE" strokeWidth="0.0" styleClass="sideBarText" text="Level name: " />
+                        <Text fx:id="levelNameText" layoutX="92.0" layoutY="51.0" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="sideBarText" text="&quot;levelName&quot;" />
+                     </children>
+                  </HBox>
+                  <TextField fx:id="levelNameTextField" maxWidth="200.0" minHeight="35.0" prefHeight="13.0" prefWidth="200.0" promptText="lrvrlName">
+                     <VBox.margin>
+                        <Insets bottom="5.0" />
+                     </VBox.margin>
+                  </TextField>
+                  <Button fx:id="sizeChangeButton1" alignment="CENTER" contentDisplay="CENTER" layoutX="59.0" layoutY="97.0" mnemonicParsing="false" onAction="#requestChangeLevelName" prefHeight="36.0" prefWidth="187.0" styleClass="sideBarButton" text="ChangeName" />
                </VBox>
+               <VBox alignment="CENTER" prefHeight="78.0" prefWidth="284.0" spacing="5.0">
+                  <children>
+                     <HBox alignment="CENTER" prefHeight="54.0" prefWidth="284.0">
+                        <children>
+                           <Text strokeType="OUTSIDE" strokeWidth="0.0" styleClass="sideBarText" text="Ready: " />
+                           <Text fx:id="readyPlayersText" layoutX="125.0" layoutY="61.0" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="sideBarText" text="21/37" />
+                        </children>
+                        <VBox.margin>
+                           <Insets top="10.0" />
+                        </VBox.margin>
+                     </HBox>
+                     <Button fx:id="readyButton" alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" onAction="#readyButtonAction" prefHeight="36.0" prefWidth="187.0" styleClass="greenSideBarButton" text="I'm Ready" />
+                  </children>
+               </VBox>
+               <Separator prefHeight="37.0" prefWidth="284.0" />
                <Button fx:id="levelSettingsButton" mnemonicParsing="false" onAction="#displayLevelSettings" prefHeight="36.0" prefWidth="187.0" styleClass="sideBarButton" text="Level Settings">
                   <VBox.margin>
-                     <Insets left="50.0" top="240.0" />
+                     <Insets left="50.0" />
                   </VBox.margin>
                </Button>
             </VBox>
