--- a/src/main/resources/clientLevelSelection.fxml
+++ b/src/main/resources/clientLevelSelection.fxml
@@ -1,23 +1,26 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
+<?import javafx.scene.canvas.Canvas?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.RadioButton?>
 <?import javafx.scene.control.ToggleGroup?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
 
 <BorderPane fx:id="clientLevelsSelectionRoot" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="500.0" prefWidth="800.0" stylesheets="@menu.css" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="MenuController">
    <right>
-      <VBox id="sidebar3-menu" alignment="TOP_CENTER" maxHeight="315.0" minHeight="315.0" prefHeight="315.0" prefWidth="206.0" spacing="7.0" BorderPane.alignment="CENTER">
+      <VBox id="sidebar3-menu" alignment="TOP_CENTER" maxHeight="315.0" minHeight="315.0" prefHeight="315.0" prefWidth="206.0" spacing="4.0" BorderPane.alignment="CENTER">
          <padding>
             <Insets top="13.0" />
          </padding>
-         <VBox alignment="CENTER" prefHeight="82.0" prefWidth="206.0" spacing="3.0">
+         <VBox alignment="CENTER" prefHeight="76.0" prefWidth="206.0" spacing="3.0">
             <children>
                <RadioButton id="radio-button" fx:id="cooperationClientRadioButton" mnemonicParsing="false" onAction="#clientGamemodeTypeChanged" prefHeight="24.0" prefWidth="125.0" selected="true" text="    Cooperation" textAlignment="CENTER">
                   <toggleGroup>
@@ -30,7 +33,9 @@
          </VBox>
          <Button mnemonicParsing="false" onAction="#changeToMenu" prefHeight="39.0" prefWidth="187.0" text="MainMenu" />
          <Button id="green-menu-button1" fx:id="playTheGameClientButton" alignment="CENTER" mnemonicParsing="false" onAction="#playTheGameClient" prefHeight="39.0" prefWidth="187.0" text="Play!" />
-         <Button id="red-menu-button" fx:id="deleteButtonClient" disable="true" mnemonicParsing="false" onAction="#deleteButtonClient" prefHeight="39.0" prefWidth="187.0" text="Delete saved game" />
+         <Button id="red-menu-button" fx:id="deleteButtonClient" disable="true" mnemonicParsing="false" onAction="#deleteButtonClient" prefHeight="39.0" prefWidth="187.0" text="Delete created level" />
+         <Button fx:id="downloadMapButtonClient" disable="true" layoutX="20.0" layoutY="112.0" mnemonicParsing="false" onAction="#downloadMap" prefHeight="39.0" prefWidth="187.0" text="Download Map" />
+         <Text id="sideBarText" fx:id="downloadingLevelText" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="sideBarText" wrappingWidth="166.0625" />
       </VBox>
    </right>
    <left>
@@ -70,7 +75,10 @@
    </left>
    <center>
       <VBox alignment="CENTER" prefHeight="350.0" prefWidth="430.0" BorderPane.alignment="CENTER">
-         <Label text="Loading..." />
+         <children>
+            <Canvas fx:id="clientLevelCanvas" height="42.0" width="64.0" />
+            <ImageView fx:id="clientLevelView" fitHeight="339.0" fitWidth="411.0" pickOnBounds="true" preserveRatio="true" />
+         </children>
       </VBox>
    </center>
    <bottom>
