--- a/src/main/resources/menu.css
+++ b/src/main/resources/menu.css
@@ -13,7 +13,12 @@
     -fx-font-size: 20.0px;
     -fx-text-alignment: center;
 }
-
+.sideBarText{
+    -fx-fill: #00ffe4;
+    -fx-font-size: 20.0px;
+    -fx-text-alignment: center;
+    -fx-font-family: 'Linerama';
+}
 #labelMOTD {
     
     -fx-text-fill: #00ffe4;
@@ -23,8 +28,8 @@
 
 .radio-button > .radio {
     -fx-background-color: transparent;
-    -fx-background-insets: 0;
-    -fx-background-radius: 0px;
+    -fx-background-insets: 0.0;
+    -fx-background-radius: 0.0px;
     -fx-padding: 0.0em; /* 4 8 4 8 */
 }
 .radio-button:selected > .radio > .dot {
@@ -37,7 +42,7 @@
 
 .button{
     -fx-background-image: url('gui/level-button.png');
-    -fx-font-size: 18px;
+    -fx-font-size: 18.0px;
     -fx-font-family: 'Linerama';
 }
 
@@ -54,7 +59,7 @@
 }
 
 .profileLabel {
-    -fx-font-size: 30px;
+    -fx-font-size: 30.0px;
     -fx-font-family: 'Linerama';
 }
 
@@ -72,7 +77,7 @@
 }
 #selectedLevelHeadingLabel {
     -fx-text-alignment: center;
-    -fx-font-size: 30px;
+    -fx-font-size: 30.0px;
     -fx-font-family: 'Linerama';
 }
 
